# Image_processor

./: README.md
ImageProcessor/: CMakeLists.txt
ImageProcessor/src/: Bitmap.cpp  Bitmap.h  Filter.cpp  Filter.h  Handler.cpp  Handler.h  ImageProcessor.cpp
ImageProcessor/tests/: CMakeLists.txt  Test.cpp
